# support-portal-remediation-agent

./: .env.example  .gitignore  AGENTS.md  APP_BUILD_PLAN.md  CODEX_IMPLEMENTATION_BRIEF.md  CONF26_ABSTRACT.md  INSTRUMENTATION_AND_OBSERVABILITY.md  README.md  SESSION_OUTLINE.md  SPEAKER_NOTES.md  SPLUNK_AUTOMATION_PLAN.md  USE_CASE.md  mkdocs.yml  package-lock.json  package.json
.cursor/rules/: codex-imported-context.mdc
apps/api-gateway/: package.json
apps/assistant-service/: package.json
apps/case-service/: package.json
apps/frontend/: index.html  package.json  vite.config.ts
apps/knowledge-service/: package.json
apps/operator-console/: package.json  vite.config.ts
apps/remediation-agent/: pyproject.toml
apps/remediation-agent/app/: main.py  telemetry.py
apps/remediation-orchestrator/: package.json
apps/scenario-controller/: package.json
codex-archive/: INDEX.md  add-splunk-log-collection__019d22c2.md  brainstorm-ai-remediation-session__019cd807.md  check-workshop-readiness__019e27c8.md  create-ai-pods-and-splunk-session__019cd808.md  draft-abstract-for-conf26__019d2029.md  fill-workshop-template__019d9cfa.md  initialize-repo-and-update-readme__019e2820.md  plan-repo-and-tests__019d6e0e.md  prepare-workshop-run-through__019e27c9.md  run-demo-and-validate-traces__019d3100.md  start-services-and-refresh-webhook__019d4ecd.md
docs/: index.md
docs/architecture/: ORCHESTRATOR_FLOW.md  SPLUNK_API_INTEGRATION.md  SPLUNK_OBJECTS.md
infra/terraform/: README.md  (+5 more)
scripts/: rum-simulator.mjs  traffic-simulator.mjs
tests/: test_sync_splunk_objects.py
(+49 files in other folders)
